<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="fb_ac_ratio_ctrl" Id="{86afd01c-b43a-4f54-91b7-7c37e6d453f0}">
    <Declaration><![CDATA[FUNCTION_BLOCK fb_ac_ratio_ctrl

VAR_INPUT
	(*
	set_ya:  REAL := g_set_ya;
	set_yac: REAL := g_set_yac;
	xmeas11: REAL := g_xmeas[11];
	xmeas23: REAL := g_xmeas[23];
	xmeas25: REAL := g_xmeas[25];
	*)
END_VAR

VAR_OUTPUT
END_VAR

VAR
	// A & C measurements
	yA: 	REAL;
	yAC:	REAL;
	
	// yA control looop
	ya_control: fb_vel_pi := (kc := 0.0002, ti := 1.0, ts := g_Ts);
	ya_control_kc :	REAL := 0.0;
	loop14:	REAL := 0.0;
	
	// yAC control loop
	yac_control: fb_vel_pi := (kc := 0.0003, ti := 2, ts := g_Ts);
	loop15: REAL := 0.0;	
	
	// ratio trimming
	ratio_trimming: fb_ratio_trimming := (r1:=r_0[1], r4:=r_0[4]);
	
	// fine ac adjustments
	ac_measurements: fb_ac_measurements;	
	ratio_trimming_0: fb_ratio_trimming 	:= (r1 := g_rx[1], r4 := g_rx[4]);

END_VAR

]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Fbd"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"yAC"</v>
                            <v n="Type">"REAL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="Id">180L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fb_ac_measurements"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"ac_measurements"</v>
                          <v n="Type">"fb_ac_measurements"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">" fine ac adjustments"</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="Id">173L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">"yA"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">" A &amp; C measurements"</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="Id">175L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"g_xmeas[23]"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">" storage variables for sub-controllers"</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">177L</v>
                            </o>
                            <v n="Id">176L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"g_xmeas[25]"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">" storage variables for sub-controllers"</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">179L</v>
                            </o>
                            <v n="Id">178L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>xmeas23</v>
                            <v>xmeas25</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                            <v>REAL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>yAC</v>
                            <v>yA</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                            <v>REAL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <v n="Id">174L</v>
                      </o>
                      <v n="Id">181L</v>
                    </o>
                  </l2>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <l2 n="Connectors" />
                  <v n="Id">172L</v>
                </o>
                <o>
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"loop14"</v>
                            <v n="Type">"REAL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="Id">89L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fb_vel_pi"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"ya_control"</v>
                          <v n="Type">"fb_vel_pi"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">" yA control looop"</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="Id">125L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"g_set_ya"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">86L</v>
                            </o>
                            <v n="Id">85L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"yA"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">" A &amp; C measurements"</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">88L</v>
                            </o>
                            <v n="Id">87L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>setpoint_in</v>
                            <v>xmeas_in</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>LREAL</v>
                            <v>LREAL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>delta_out</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <v n="Id">126L</v>
                      </o>
                      <v n="Id">90L</v>
                    </o>
                  </l2>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <l2 n="Connectors" />
                  <v n="Id">82L</v>
                </o>
                <o>
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"loop15"</v>
                            <v n="Type">"REAL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="Id">71L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fb_vel_pi"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"yac_control"</v>
                          <v n="Type">"fb_vel_pi"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">" yAC control loop"</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="Id">133L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"g_set_yac"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">68L</v>
                            </o>
                            <v n="Id">67L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"yAC"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">70L</v>
                            </o>
                            <v n="Id">69L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>setpoint_in</v>
                            <v>xmeas_in</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>LREAL</v>
                            <v>LREAL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>delta_out</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <v n="Id">134L</v>
                      </o>
                      <v n="Id">72L</v>
                    </o>
                  </l2>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <l2 n="Connectors" />
                  <v n="Id">64L</v>
                </o>
                <o>
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"g_rx[1]"</v>
                            <v n="Type">"REAL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="Id">114L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fb_ratio_trimming"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"ratio_trimming"</v>
                          <v n="Type">"fb_ratio_trimming"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">" ratio trimming"</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="Id">221L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">"g_rx[4]"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="Id">109L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"loop14"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">111L</v>
                            </o>
                            <v n="Id">110L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"loop15"</v>
                              <v n="Type">"REAL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="Id">113L</v>
                            </o>
                            <v n="Id">112L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>loop14</v>
                            <v>loop15</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                            <v>REAL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>r1</v>
                            <v>r4</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REAL</v>
                            <v>REAL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <v n="Id">222L</v>
                      </o>
                      <v n="Id">115L</v>
                    </o>
                  </l2>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <l2 n="Connectors" />
                  <v n="Id">106L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>